# zc.zrs

./: CHANGES.rst  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
src/zc/zrs/: config.test  fsiterator.test  monitor.py  nagios.rst  primary-blob.test  primary-blobstorage.test  primary.py  primary.test  reactor.py  secondary.py  tests.py
