[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[project]
name = "zc.zrs"
version = "4.0.0.dev0"
description = "ZODB Replicated Storage"
readme = "README.rst"
license = "ZPL-2.1"
license-files = ["LICENSE.txt", "COPYWRITE.txt", "TWISTED-LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Jim Fulton", email = "jim@jimfulton.info" },
]
maintainers = [
    { name = "Zope Foundation and Contributors", email = "zodb@googlegroups.com" },
]
keywords = ["ZODB", "replication"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Framework :: ZODB",
]
dependencies = [
    "Twisted",
    "ZODB >= 5.6.0",
]

[project.optional-dependencies]
test = [
    "ZEO",
    "zope.testing",
    "zope.testrunner",
]

[project.scripts]
zrsmonitor-script = "zc.zrs.monitor:main"
last-zeo-transaction = "zc.zrs.last:main"
zrs-nagios = "zc.zrs.nagios:basic"

[project.urls]
Homepage = "https://github.com/georgpfolz/zc.zrs"
"Issue Tracker" = "https://github.com/georgpfolz/zc.zrs/issues"
Sources = "https://github.com/georgpfolz/zc.zrs"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
